--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-pattern": "^5.2.0"
+    "ts-pattern": "^5.2.0",
+    "type-fest": "^4.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
